--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,7 +8,7 @@
         app:showAsAction="never"/>
     <item android:id="@+id/search"
         android:title="search"
-        android:icon="@drawable/magnify"
+        android:icon="@drawable/search"
         app:showAsAction="collapseActionView|ifRoom"
          />
 </menu>
